--- a/test.ipynb
+++ b/test.ipynb
@@ -15,7 +15,10 @@
    ],
    "source": [
     "msg = \"Hello world\"\n",
-    "print(msg)"
+    "print(msg)\n",
+    "\n",
+    "from cli.akeneo import Akeneo as ak\n",
+    "import cli.check as check"
    ]
   }
  ],
